prisma/prisma-cloud/blocks/sidenav/sidenav.css
.sidenav {
  --banner-background-color: var(--color-neutral-white);
  --banner-box-shadow: 0px 2px 4px 0px rgba(0, 55, 102, 0.25);
  --banner-icon-background-color: var(--color-blue--100);
  --banner-text-color: var(--color-blue--600);

  --title-spacing-horz: var(--spacing--2);

  --toggle-border-radius: 50px;

  --sidebar-banner-padding: 50px;
}

[data-user-theme="dark"] .sidenav {
  --banner-background-color: var(--color-neutral-dark-600);
  --banner-box-shadow: 0px 2px 8px 0px rgba(0, 0, 0, 0.5);
  --banner-icon-background-color: var(--color-neutral-dark-800);
  --banner-text-color: var(--color-blue-dark--200);
}

.sidenav-wrapper {
  flex-shrink: 0;
  width: 375px;
}

.sidenav-wrapper hr,
.sidenav-container.aside-close .sidenav-wrapper .pan-sidenav .content-inner {
  display: none;
}

.sidenav-container.aside-close .sidenav-wrapper {
  min-width: 0;
  max-width: 0;
}

.book .sidenav-container.aside-close {
  padding-left: var(--spacing--4);
  padding-right: var(--spacing--4);
}

.sidenav-wrapper .toggle-aside {
  align-items: center;
  background-color: var(--article-background);
  border-bottom-left-radius: var(--toggle-border-radius);
  border-top-left-radius: var(--toggle-border-radius);
  color: var(--inline-link-text-color);
  cursor: pointer;
  display: flex;
  height: 40px;
  justify-content: center;
  position: absolute;
  right: 0;
  top: -36px;
  width: 27px;
  z-index: 2;
  transition: background-color var(--theme-transition-ease-duration)
      var(--theme-transition-ease-function),
    color var(--theme-transition-ease-duration)
      var(--theme-transition-ease-function);
}

.sidenav-wrapper .toggle-aside:before,
.sidenav-wrapper .toggle-aside:after {
  content: "";
  position: absolute;
  background-color: transparent;
  height: 20px;
  right: 0;
  width: 10px;
  transition: box-shadow var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
}

.sidenav-wrapper .toggle-aside:before {
  bottom: -20px;
  border-top-right-radius: 10px;
  box-shadow: 0 -10px 0 0 var(--article-background);
}

.sidenav-wrapper .toggle-aside:after {
  top: -20px;
  border-bottom-right-radius: 10px;
  box-shadow: 0 10px 0 0 var(--article-background);
}

.sidenav-wrapper .toggle-aside i {
  font-size: 9px;
}

/* .sidenav-wrapper .toggle-aside:hover {
  background: #a2e4f2;
} */

.sidenav-wrapper > .toggle-aside {
  position: fixed;
  right: auto;
  top: 50%;
  display: none;
  transform: translate(calc(-100% - 5px), 100%);
}

.sidenav-container.aside-close .sidenav-wrapper .banner {
  opacity: 0;
  pointer-events: none;
}

.sidenav-container.aside-close .toggle-aside {
  background-color: var(--color-body-book-background);
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
  border-bottom-right-radius: var(--toggle-border-radius);
  border-top-right-radius: var(--toggle-border-radius);
  transform: translateX(100%);
}

.sidenav-container.aside-close .toggle-aside:before {
  bottom: -20px;
  border-top-left-radius: 10px;
  box-shadow: -10px -10px 0 0 var(--color-body-book-background);
  left: 0;
  width: 20px;
}

.sidenav-container.aside-close .toggle-aside:after {
  top: -20px;
  border-bottom-left-radius: 10px;
  box-shadow: -10px 10px 0 0 var(--color-body-book-background);
  left: 0;
  right: auto;
  width: 20px;
}

.sidenav-container.aside-close .toggle-aside .icon {
  transform: scaleX(-1);
}

.pan-sidenav .banner {
  padding: 0 var(--spacing--8) 0 var(--spacing--4);
}

.banner-inner > .book-detail-banner-info,
.pan-sidenav .languages {
  display: none;
}

/* .pan-sidenav::before {
    content: "";
    display: block;
    position: absolute;
    top: 25px;
    left: -100px;
    z-index: -1;
    width: 428px;
    height: 270px;
    background-repeat: no-repeat;
    background-position: right bottom;
    background-size: 428px 270px;
    pointer-events: none;
    opacity: 0.5;
    background-image: url("/prisma/prisma-cloud/assets/sase-cns-pattern.webp");
  } */

/* .pan-sidenav .book-detail-banner-info {
  display: flex;
  align-items: center;
  color: black;
} */

.pan-sidenav .banner-info-label {
  display: none;
}

.versions .banner-dropdown,
.versions .book-detail-banner-info {
  display: flex;
  width: 100%;
}

.versions .banner-dropdown {
  background: var(--banner-background-color);
  box-shadow: var(--banner-box-shadow);
  border-radius: var(--article-border-radius);
  color: var(--banner-text-color);
  transition: background-color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
}

.pan-sidenav .version-dropdown {
  position: relative;
  min-width: 150px;
}

.pan-sidenav .version-button {
  align-items: center;
  background: transparent;
  border: none;
  color: var(--banner-text-color);
  cursor: pointer;
  display: flex;
  font-family: var(--body-font-family);
  justify-content: space-between;
  padding: var(--spacing--5) var(--spacing--6);
  text-decoration: none;
  transition: color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
  width: 100%;
}

.version-dropdown .icon-container {
  align-items: center;
  background-color: var(--banner-icon-background-color);
  border-radius: 50%;
  display: flex;
  justify-content: center;
  transition: background-color var(--theme-transition-ease-duration)
    var(--theme-transition-ease-function);
  height: var(--spacing--4);
  width: var(--spacing--4);
}

.version-dropdown .icon-container svg {
  height: var(--spacing--2);
  width: var(--spacing--2);
}

.pan-sidenav .version-dropdown-menu {
  bottom: calc(var(--drawer-margin-gap) * -1);
  left: 0;
  position: absolute;
  transform: translateY(100%);
  width: 100%;
  z-index: 2;
}

.pan-sidenav .version-dropdown .version-dropdown-menu ul {
  list-style: none;
  margin: 0;
  padding: 0;
}

.pan-sidenav
  .version-dropdown-menu.is-active
  + .version-button
  .icon-container {
  transform: scale(-1);
}
/* ... */

